﻿[COLOR yellow][B]v3.8.4[/B][/COLOR]
* Sort subtitles by Hebrew, English, and then other languages (sorted by langauges internally).
[COLOR yellow][B]v3.8.3[/B][/COLOR]
* Small code refactor. (write_heb_embedded_taglines)
[COLOR yellow][B]v3.8.2[/B][/COLOR]
* Add setting to enable/disable Russian langauge in subtitle search:
[B]הגדרות - שפות - רוסית[/B]
[COLOR yellow][B]v3.8.1[/B][/COLOR]
* Add setting to enable/disable Hebrew langauge in subtitle search:
[B]הגדרות - שפות - עברית[/B]
[COLOR yellow][B]v3.8.0[/B][/COLOR]
* Small autosub-place_sub function code fix (for loop).
[COLOR yellow][B]v3.7.8[/B][/COLOR]
* Fix small error when searching for subtitles from context menu.
[COLOR yellow][B]v3.7.7[/B][/COLOR]
* Small code refactor. (determine_placeHebrewEmbeddedSub function)
[COLOR yellow][B]v3.7.6[/B][/COLOR]
* Fix bug when local Hebrew embedded showing in subtitles list when it doesn't exist.
[COLOR yellow][B]v3.7.5[/B][/COLOR]
* Fix Ktuvit subtitle download bug.
[COLOR yellow][B]v3.7.4[/B][/COLOR]
* Added media_type parameter (movie/tv) to video data array.
[COLOR yellow][B]v3.7.3[/B][/COLOR]
* Changed [COLOR orange][LOC] כתובית מובנית 101%[/COLOR] subtitle color to [COLOR cyan]cyan[/COLOR].
* Removed "ExcludeTime" setting (don't download for videos shorter than...)
* Added setting to improve Twilight Hebrew embedded subtitles repo.
* Added more Ktuvit debug logs to identify fault response bug.
[COLOR yellow][B]v3.7.0[/B][/COLOR]
* Add setting to enable/disable autosub notification messages:
[B]הגדרות - הגדרות כלליות - הצג הודעות מידע בעת חיפוש כתוביות[/B]
* Add setting to enable/disable automatic download of embedded Hebrew subtitles:
[B]הגדרות - הגדרות כלליות - אפשר הורדה אוטומטית של כתובית מובנית בעברית (אם קיימת)[/B]
* When the setting is [B][COLOR limegreen]ON[/COLOR][/B] - Will always choose embedded Hebrew subtitles when exists ([B][COLOR yellow]UNLESS[/COLOR][/B] you have different subtitles selected in cache).