@@ -1,4 +1,6 @@
-﻿[COLOR yellow][B]v3.8.4[/B][/COLOR]
+﻿[COLOR yellow][B]v3.8.5[/B][/COLOR]
+* Always trigger autosub, even when replaying the same content.
+[COLOR yellow][B]v3.8.4[/B][/COLOR]
 * Sort subtitles by Hebrew, English, and then other languages (sorted by langauges internally).
 [COLOR yellow][B]v3.8.3[/B][/COLOR]
 * Small code refactor. (write_heb_embedded_taglines)
